--- a/pom.xml
+++ b/pom.xml
@@ -30,20 +30,22 @@
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.9.0</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.23.1</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>5.9.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -51,8 +53,8 @@
     <plugins>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-checkstyle-plugin</artifactId>
-            <version>3.1.2</version>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M7</version>
             <dependencies>
                 <dependency>
                     <groupId>com.puppycrawl.tools</groupId>
@@ -72,7 +74,6 @@
                         <includeTestSourceDirectory>true</includeTestSourceDirectory>
                     </configuration>
                     <goals>
-                        <goal>check</goal>
                     </goals>
                 </execution>
             </executions>
