--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>4.19.0</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.2</version>
@@ -149,7 +154,7 @@
             <plugin>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-maven-plugin</artifactId>
-            <version>4.15.0</version>
+            <version>4.19.0</version>
             <configuration>
                 <propertyFile>db/liquibase.properties</propertyFile>
             </configuration>
